# ChiikawaNutritionAdventure

./: .gitignore  ChiikawaNutritionAdventure.pro  README.md  SQLQuery1.sql  audio_manager.cpp  audio_manager.h  chiikawa_game.db  database_setup.sql  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  nutrition_quiz_window.cpp  nutrition_quiz_window.h  resources.qrc  设计需求.txt
mode1_carbohydrate_battle/: carbohydrate_config.h  carbohydrate_game_scene.cpp  carbohydrate_game_scene.h  carbohydrate_game_window.cpp  carbohydrate_game_window.h  fake_vegetable_boss.cpp  fake_vegetable_boss.h  fiber_sword.cpp  fiber_sword.h  game_map.cpp  game_map.h  player.cpp  player.h
mode2_sugar_oil_battle/: CMakeLists.txt  README.md  SugarOilBattle.pro  bullet_base.cpp  bullet_base.h  creature.cpp  creature.h  creature_system.cpp  creature_system.h  enemy_base.cpp  enemy_base.h  game_item.cpp  game_item.h  game_object_base.cpp  game_object_base.h  item_system.cpp  item_system.h  main.cpp  sugar_oil_config.h  sugar_oil_enemy.cpp  sugar_oil_enemy.h  sugar_oil_game_scene.cpp  sugar_oil_game_scene.h  sugar_oil_game_scene_new.cpp  sugar_oil_game_scene_new.h  sugar_oil_game_window.cpp  sugar_oil_game_window.h  sugar_oil_main_window.cpp  sugar_oil_main_window.h  sugar_oil_player.cpp  sugar_oil_player.h  usagi_player.cpp  usagi_player.h
素材/: chiikawa源代码.txt  qt单词解析.txt
素材/pacman_7/Pacman/: .qmake.stash  chooselevelscene.cpp  pacman_res.qrc  pacman_zh_CN.ts  playerclass.cpp  playerclass.h  propsobject.cpp  propsobject.h  rulewindow.cpp  rulewindow.h  rulewindow.ui
(+6 files in other folders)
